--- a/my_simple_calc/pubspec.yaml
+++ b/my_simple_calc/pubspec.yaml
@@ -10,10 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
