--- a/mytukang/pubspec.yaml
+++ b/mytukang/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^1.2.2
   image_picker: ^1.1.2
   intl: ^0.20.2
+  shared_preferences: ^2.2.3
   url_launcher: ^6.3.1
 
 dev_dependencies:
