--- a/mytukang/android/app/src/main/AndroidManifest.xml
+++ b/mytukang/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 <uses-permission android:name="ANDROID.PERMISSION.READ_EXTERNAL_STORAGE"/>
 <uses-permission android:name="ANDROID.PERMISSION.WRITE_EXTERNAL_STORAGE"/>
+<uses-permission android:name="ANDROID.PERMISSION.INTERNET"/>
+<uses-permission android:name="ANDROID.PERMISSION.ACCESS_NETWORK_STATE"/>
+<uses-permission android:name="ANDROID.PERMISSION.ACCESS_WIFI_STATE"/>
     <application
-        android:label="mytukang"
+        android:label="MyTukang"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/mytukang">
         <activity
             android:name=".MainActivity"
             android:exported="true"
