--- a/mytukang/pubspec.yaml
+++ b/mytukang/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_rating_bar: ^4.0.1
   http: ^1.2.2
   image_picker: ^1.1.2
   intl: ^0.20.2
