--- a/mytukang/android/app/src/main/AndroidManifest.xml
+++ b/mytukang/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-<uses-permission android:name="ANDROID.PERMISSION.READ_EXTERNAL_STORAGE"/>
-<uses-permission android:name="ANDROID.PERMISSION.WRITE_EXTERNAL_STORAGE"/>
+<uses-permission android:name="ANDROID.permission.READ_EXTERNAL_STORAGE"/>
+<uses-permission android:name="ANDROID.permission.WRITE_EXTERNAL_STORAGE"/>
 <uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="ANDROID.PERMISSION.ACCESS_NETWORK_STATE"/>
-<uses-permission android:name="ANDROID.PERMISSION.ACCESS_WIFI_STATE"/>
+<uses-permission android:name="ANDROID.permission.ACCESS_NETWORK_STATE"/>
+<uses-permission android:name="ANDROID.permission.ACCESS_WIFI_STATE"/>
     <application
         android:label="MyTukang"
         android:name="${applicationName}"
